--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=omdbapi
 #OMDB API
 omdbapi.base-url=https://www.omdbapi.com/
 omdbapi.api-key=${OMDB_API_KEY}
+
+#Caching
+spring.cache.type=caffeine
